# hasktorch-compose

./: README.md  flake.nix  hasktorch-compose.cabal
exe/: Main.hs
src/Torch/: Compose.hs
src/Torch/Compose/: Models.hs  NN.hs
src/Torch/Typed/: Compose.hs
src/Torch/Typed/Compose/: Models.hs  NN.hs
test/: Spec.hs
