cabal-version:       2.2
name:                hasktorch-compose
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: Haskell2010
  build-depends:
      base >= 4.12 && < 5
    , hasktorch >= 0.2 && < 0.3
    , HList

common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hasktorch-compose

library
  import: base
  exposed-modules:
    Torch.Compose
    Torch.Compose.NN
    Torch.Compose.Models
    Torch.Typed.Compose
    Torch.Typed.Compose.NN
    Torch.Typed.Compose.Models
  hs-source-dirs: src
--  default-extensions:  Strict
--                     , StrictData

test-suite spec
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , hasktorch
                    , hasktorch-compose
                    , hspec
                    , HList
                     
executable example
  import: binary-base
  main-is: Main.hs
  hs-source-dirs: exe
